--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -203,7 +203,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="120dp"
             android:backgroundTint="@color/orange"
-            android:contentDescription="@null"
+            android:contentDescription="add expense button"
             android:src="@drawable/ic_add"
             android:tint="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
