--- a/app/src/main/res/layout/activity_expense_details_wallet.xml
+++ b/app/src/main/res/layout/activity_expense_details_wallet.xml
@@ -117,6 +117,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+
     <LinearLayout
         android:id="@+id/infoList"
         android:layout_width="0dp"
@@ -219,6 +220,25 @@
             android:textSize="16sp"
             android:layout_marginBottom="16dp" />
 
+        <EditText
+            android:id="@+id/expenseDateEdit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:focusable="false"
+            android:clickable="true"
+            android:inputType="none"
+            android:hint="Tap to change date"
+            android:drawableEnd="@drawable/ic_calendar"
+            android:drawablePadding="8dp"
+            android:textColor="@android:color/white"
+            android:textSize="16sp"
+            android:visibility="gone"
+            android:layout_marginBottom="16dp"
+            android:paddingVertical="8dp"
+            android:paddingStart="4dp"
+            android:backgroundTint="@color/orange" />
+
+
     </LinearLayout>
 
     <View
@@ -259,5 +279,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="24dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
