--- a/app/src/main/res/layout/activity_my_wallet.xml
+++ b/app/src/main/res/layout/activity_my_wallet.xml
@@ -89,7 +89,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="No expenses to be shown."
-        android:textSize="14dp"
+        android:textSize="14sp"
         android:textColor="@color/white"
         android:gravity="center"
         android:visibility="gone"
