--- a/app/src/main/res/layout/activity_my_wallet.xml
+++ b/app/src/main/res/layout/activity_my_wallet.xml
@@ -44,14 +44,11 @@
             android:contentDescription="Next Year" />
     </LinearLayout>
 
-    <!-- Bar Chart Placeholder -->
-    <ImageView
+    <com.example.budgetmaster.ui.components.CustomBarChartView
         android:id="@+id/barChart"
         android:layout_width="0dp"
-        android:layout_height="120dp"
+        android:layout_height="200dp"
         android:layout_marginTop="16dp"
-        android:scaleType="fitCenter"
-        android:src="@drawable/bm_logo"
         app:layout_constraintTop_toBottomOf="@id/yearPicker"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
